Fix baseline grid alignment

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -166,12 +166,12 @@ header {
   background-image: -o-linear-gradient(top, #4c0101 0%, #a60303 70%, #920303);
   background-image: linear-gradient(top, #4c0101 0%, #a60303 70%, #920303);
   color: white;
-  min-height: 198px;
+  min-height: 216px;
   text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.36); }
   header .center {
     background: url("../images/grid-bg.png") no-repeat center top;
     background-size: 100% 200px;
-    padding: 39px 0 24px 0; }
+    padding: 39px 0 0 0; }
   header p {
     width: 100%;
     max-width: 620px; }
@@ -185,7 +185,7 @@ header {
 section {
   width: 100%;
   max-width: 620px;
-  padding-bottom: 36px; }
+  padding-bottom: 24px; }
 
 h1 {
   color: white;
@@ -216,7 +216,7 @@ footer {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
-  margin-top: 4px;
+  margin-top: 16px;
   padding: 9px 0;
   text-align: center; }
 
